--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ header nav li{
 
 /**banner**/
 .banner{
-    background-image: url(/img/banner.webp);
+    background-image: url(../img/banner.webp);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
