--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ hr.dotted {
 .footer p { color: #000;}
 
 button{
-    padding: 10rem;
+    padding: 10px;
 }
 @media (min-width: 900px) {
     header{
