--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ hr.dotted {
 
 /**about me**/
 .about-contents{
-     text-align: center;
+     text-align: justify;
      color:#FFFDD0;
 }
 .about-text{
