--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,8 @@ hr.dotted {
 }
 .about-text{
     padding: 1.2rem;
-    text-align: center;
-    width: 50%:
+    text-align: justify;
+    width: 50%;
 }
 
 
