--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,10 @@ header nav li{
     text-align: center;
     padding-top: 50%;
 }
+
+.banner li{
+    color: #FFFDD0;
+}
 hr.dotted {
     border-top: 1px dotted red;
     border-bottom: 1px dotted red;
