--- a/css/style.css
+++ b/css/style.css
@@ -115,8 +115,7 @@ hr.dotted {
     border-bottom: 1px dotted red;
   }
 .banner-contents {
-    background-color: black;
-    opacity: 0.5;
+    background: rgba(black, 0.5);
     color: #FFFDD0;
 }
 
