--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ header nav li{
 .banner{
     background-image: url(../img/banner.webp);
     background-repeat: no-repeat;
+    opacity: 0.5;
     background-size: cover;
     height: 100vh;
     text-align: center;
@@ -115,7 +116,7 @@ hr.dotted {
     border-bottom: 1px dotted red;
   }
 .banner-contents {
-    background: rgba(black, 0.5);
+    
     color: #FFFDD0;
 }
 
