--- a/css/style.css
+++ b/css/style.css
@@ -115,8 +115,8 @@ hr.dotted {
     border-bottom: 1px dotted red;
   }
 .banner-contents {
-  
-     color: red;
+    background-color: rgba(255, 0, 0, 0.6);
+     color: #FFFDD0;
 }
 
 /**about me**/
