--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,7 @@ hr.dotted {
 .projects-list{
     display: flex;
     justify-content: center;
+    background-color: #FFFDD0;
 }
 /* contact-form */
 .contact textarea{
