--- a/css/style.css
+++ b/css/style.css
@@ -163,8 +163,7 @@ hr.dotted {
    
 }
 
-.projects-list li {background-color: #FFFDD0;
-width: 60%;}
+.projects-list li {background-color: #FFFDD0;}
 /* contact-form */
 .contact textarea{
     min-height: 10rem;
