--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,9 @@ hr.dotted {
         width: auto;
         background-color: transparent;
     }
-   
+    .banner{
+        height: 5%;
+    }
   
 
     .hidden{
