--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,9 @@ hr.dotted {
      color: #FFFDD0;
 }
 
-
+.banner-list li{
+    color: #000;
+}
 /**about me**/
 .about-contents{
      text-align: center;
@@ -215,7 +217,7 @@ hr.dotted {
     header{
         justify-content: space-between;
         align-items: center;
-        height: 7rem;
+        height: 9rem;
     }
      
     .logo {
@@ -229,7 +231,10 @@ hr.dotted {
     header nav a{
         color: #000;
     }
+    header ul li{
+        margin: 0 0.8rem 0 0.8rem;
    
+    }
     
     header nav{
         position: unset;
@@ -237,9 +242,11 @@ hr.dotted {
         background-color: transparent;
     }
     .banner{
-        height: 5rem;
+        height: 50%;
     }
-  
+    header nav ul{
+        display:flex !important;
+    }
 
     .hidden{
         display: flex;
@@ -308,7 +315,11 @@ hr.dotted {
 
 
  /* bannerlist */
- 
+ .banner-contents ul li {
+    font-size: 2.8rem;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+ }
 
  h1{
      font-size: 5rem;
