--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ hr.dotted {
         justify-content: space-evenly;
     }
     .list-for-banner a{
-        width: 50%;
+        font-size: 4rem;
     }
     /* portfolio */
   
