--- a/projects/firstproject-designcomp-jidul/css/styles.css
+++ b/projects/firstproject-designcomp-jidul/css/styles.css
@@ -117,7 +117,21 @@ header img{
   justify-content: space-between;
   padding: 0.6rem;
 }
-
+.show-nav .menu-links{
+    display: block;
+    background-color: #2c3e5b ;
+    width: 100%;
+    left: 0;
+    right: 0;
+    top: 7rem;
+    padding: 1rem;
+    text-align: center;
+}
+.show-nav .menu-links a{
+    color: #ffffff;
+    padding: 1rem;
+    display: block;
+}
 
 
 
